# igraph-SE2

./: .gitignore  .gitmodules  CHANGELOG.md  CMakeLists.txt  Makefile  README.md  flake.nix
.github/workflows/: build.yaml  buildAllToolboxes.m  buildtoolbox.m  matlab.yaml  python.yaml  release.yaml
include/: speak_easy_2.h
matlab/mex/: isdirected.c
python/: CMakeLists.txt  README.md  build.py  example.py  pyproject.toml  setup.py
python/speakeasy2/: __init__.py  _speakeasy2.c
src/: Makefile  se2_label.c  se2_partitions.c  se2_partitions.h  se2_reweight_graph.c  se2_seeding.h
src/mex/: CMakeLists.txt  SpeakEasy2.c
src/speakeasy2/: CMakeLists.txt  Makefile  se2_core.c  se2_label.h  se2_modes.c  se2_modes.h  se2_partitions.h  se2_print.h  se2_random.c  se2_random.h  se2_reweight_graph.h  se2_seeding.c
src/speakeasy2/include/: speak_easy_2.h
tests/: Makefile  example.c
toolbox/: Makefile  speakeasy2.m
toolbox/private/: mustBeAdj.m
